--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,20 @@ img {
   display: block;
   max-width: 100%;
 }
+.timer {
+  margin-top: 30px;
+  display: flex;
+  column-gap: 50px;
+}
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.value {
+  font-size: 40px;
+  line-height: 1;
+}
+.label {
+  font-size: 16px;
+}
